--- a/public/front_assets/css/style.css
+++ b/public/front_assets/css/style.css
@@ -2766,7 +2766,7 @@ Footer Top Area Style
 Footer Bottom Area Style
 ======================================================*/
 .footer-bottom-area {
-  background-color: #0664cd;
+  background-color: #080f2b;
   padding: 10px 0;
 }
 
@@ -7335,15 +7335,15 @@ Slider Area Five Style
 .slider-area-five .slider-item .slider-text::before {
   content: "";
   position: absolute;
-  top: -150%;
+  top: -250%;
   left: -100%;
-  width: 150%;
-  height: 350%;
-  background-color: rgba(0, 55, 130, 0.5);
+  width: 280%;
+  height: 650%;
+  background-color: rgba(0 55 130 / 39%);
   z-index: -1;
 }
 
-.slider-area-five .slider-item .slider-text::after {
+/* .slider-area-five .slider-item .slider-text::after {
   content: "";
   position: absolute;
   top: -150%;
@@ -7352,7 +7352,7 @@ Slider Area Five Style
   height: 350%;
   background-color: rgba(0, 55, 130, 0.5);
   z-index: -1;
-}
+} */
 
 .slider-area-five .slider-item .slider-text span {
   color: #ffffff;
@@ -7396,8 +7396,8 @@ Slider Area Five Style
 }
 
 .slider-area-five .owl-item.active .slider-text.one h1 {
-  -webkit-animation: 2s .2s fadeInUpBig both;
-          animation: 2s .2s fadeInUpBig both;
+  -webkit-animation: 2s .2s fadeInRightBig both;
+          animation: 2s .2s fadeInRightBig both;
 }
 
 .slider-area-five .owl-item.active .slider-text.one p {
@@ -7561,8 +7561,9 @@ Banner Area Style
 }
 
 .map-info-area .corporate-info img {
-  height: 200px;
-  width: 100%;
+  height: 100px;
+  width: 40%;
+  text-align: center;
 }
 .map-info-area .address h2 {
   padding: 10px 0;
